HTML5 adapted and validated

--- a/sites/style.css
+++ b/sites/style.css
@@ -45,7 +45,7 @@ legend{color:inherit;display:table;max-width:100%;padding:0;white-space:normal}t
 
 
 body,h1,h5 {font-family: "Raleway", sans-serif}
-body{font-size: }
+body{font-size: 1em}
 body, html {height: 100%}
 .bgimg {
     background-image: url('../imgs/typewriter-801921_1920.jpg');
