--- a/sites/style.css
+++ b/sites/style.css
@@ -48,12 +48,13 @@ body,h1,h5 {font-family: "Raleway", sans-serif}
 body{font-size: 1em}
 body, html {height: 100%}
 .bgimg {
-    background-image: url('../imgs/typewriter-801921_1920.jpg');
+    background-image: url('/typewriter.jpg');
     min-height: 100%;
     background-position: center;
     background-size: cover;
 }
 
+.form{margin:5%}
 .button{-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}   
 .button{border:none;display:inline-block;padding:8px 16px;vertical-align:middle;overflow:hidden;text-decoration:none;color:inherit;background-color:inherit;text-align:center;cursor:pointer;white-space:nowrap}
 .button:hover{color:#004d4d!important;background-color:#dfbf9f!important}
