--- a/sites/style.css
+++ b/sites/style.css
@@ -53,6 +53,7 @@ body, html {height: 100%}
     background-position: center;
     background-size: cover;
 }
+/*#relative{position: relative;}*/
 
 .form{margin:5%}
 .button{-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}   
@@ -63,13 +64,11 @@ body, html {height: 100%}
 .container{padding:0.01em 16px}/*.panel{margin-top:16px;margin-bottom:16px}*/
 
 .display-topleft{position:absolute;left:0;top:0}.display-topright{position:absolute;right:0;top:0}
-.display-bottomleft{position:absolute;left:0;bottom:0}.display-bottomright{position:absolute;right:0;bottom:0}
+.display-bottomleft{position:absolute;left:0;bottom:0;max-width: 50%;}.display-bottomright{position:absolute;right:0;bottom:0;max-width: 50%;}
 .display-middle{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);-ms-transform:translate(-50%,-50%)}
 .display-container:hover .display-hover{display:block}.display-container:hover span.display-hover{display:inline-block}.display-hover{display:none}text-white
 
-
-.xlarge{font-size:2vmax}.xxlarge{font-size:3vmax}.xxxlarge{font-size:7vmax}.jumbo{font-size:10vmax}
-
+.xlarge{font-size:2vmax}.xxlarge{font-size:3vmax}.xxxlarge{font-size:7vmax}.jumbo{font-size:10vmin}
 
 .petrol{color:#006666}
 .bgpetrol{color:#fff!important; background-color:#006666!important}
